--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,18 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #FAFAFA;
 }
 
 .site-container {
     width: 90%;
-    padding: 2rem 3rem;
+    padding: 1rem 3rem;
     display: flex;
     justify-content: space-between;
 }
 
 .site-header {
-    background-color: #ffffff;
+    background-color: #FAFAFA;
     color: #000000;
     width: 100%;
 }
@@ -22,14 +23,11 @@ body {
 }
 
 .main-navigation ul {
-    padding: 0 3rem;
-    display: flex;
     color: #000;
 }
 
 .main-navigation ul li {
     list-style-type: none;
-    margin-left: 20px;
     padding: 0 28px;
 }
 
@@ -41,18 +39,32 @@ body {
 }
 
 .main-navigation ul li a:hover {
-    color: #1e5afc;
-    transition: all 0.4s ease;
+    color: #4D64FF;
+    transition: all 0.3s ease;
 }
 
 main .content-body {
-    background-color: #ececec;
+    background-color: #FAFAFA;
     padding: 20rem 0;
     text-align: center;
 }
 
+main .content-body #landing-message {
+    width: 80%;
+    background-color: #FFF4B2;
+    font-size: 30px;
+    border-radius: 7px;
+}
+
+main .content-body #access-resources {
+    background-color: #A8D5BA;
+    width: 80px;
+    font-size: 20px;
+    border-radius: 7px;
+}
+
 .footer {
-    background-color: #ffffff;
+    background-color: #FAFAFA;
     color: #000000;
     box-sizing: border-box;
     width: 100%;
