--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .site-header .logo img {
-    height: 40px;
+    height: 80px;
 }
 
 .main-navigation ul {
@@ -47,7 +47,8 @@ body {
 
 main .content-body {
     background-color: #FAFAFA;
-    padding: 20rem 0;
+    padding: 1rem 1rem;
+    display: flex;
     justify-content: center;
 }
 
@@ -55,16 +56,22 @@ main .content-body #landing-message {
     width: 80%;
     background-color: #FFF4B2;
     font-size: 30px;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
+}
+
+main .content-body p {
+    font-size: 20px;
 }
 
 main .content-body #access-resources {
     background-color: #A8D5BA;
-    width: 120px;
-    font-size: 20px;
-    border-radius: 10px;
+    width: 2rem;
+    padding: 1rem 1rem;
+    font-size: 30px;
+    border-radius: 5px;
     text-align: center;
+    font-weight: 500;
     border: none;
 }
 
@@ -85,12 +92,12 @@ main .content-body #access-resources {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .footer-row {
     padding: 10px 0;
     padding-bottom: 20px;
-    width: 20%;
     justify-content: left;
 }
 
@@ -116,18 +123,16 @@ main .content-body #access-resources {
 }
 
 #footer-logo-section {
-    width: 10%;
     padding: 0;
 }
 
 #footer-logo {
-    height: 12rem;
+    height: 60px;
 }
 
 #footer-text {
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 50%;
     padding: 1rem 1rem;
     padding-right: 10rem;
 }
